@@ -1,6 +1,7 @@
 MMC Version 0.
   query_all_nodes now recreates each node
   STOP_SERVER now has delay to give logs a change to be updated
+  Added exception handling to openurl call in main
 
 
 MMC Version 0.13.0
